Added profile form section and profile page

--- a/views/layouts/home/event-landing.ejs
+++ b/views/layouts/home/event-landing.ejs
@@ -19,6 +19,12 @@
   <!-- organizers -->
   <%- include("./sections/event-organizers.ejs") %> 
 
+   <!-- sponsers -->
+   <%- include("./sections/event-sponsers.ejs") %> 
+
+    <!-- hosts -->
+    <%- include("./sections/event-hosts.ejs") %> 
+
   <!-- Footer Section -->
   <footer id="footer" class="relative z-10 footer-area pt-2">
     <div class="footer-bg" style="background-image: url(/img/footer-bg.svg);"></div>
