--- a/views/layouts/home/sections/collective-events.ejs
+++ b/views/layouts/home/sections/collective-events.ejs
@@ -2,7 +2,7 @@
 <div class="mt-7">
 
   <!--FEATURED EVENTS-->
-  <div id="feature">
+  <div id="feature" class="mt-10" style="margin-top: 120px;">
     <div class="mt-16 flex flex-col justify-center items-center wow fadeIn" data-wow-duration="1s"
       data-wow-delay="0.5s">
 
@@ -46,6 +46,10 @@
             </div>
           </div>
           <% } %> 
+        </div>
+        <!-- button here -->
+        <div class="flex justify-center items-center">
+          <a class="cursor-pointer inline-block font-semibold text-white duration-200 rounded-md mt-4 p-3 hover:shadow-xl bg-red-600 overflow-hidden">View All</a>
         </div>
       </div>
     </div>
@@ -103,6 +107,10 @@
           </div>
           <% } %> 
         </div>
+        <!-- button here -->
+        <div class="flex justify-center items-center">
+          <a class="cursor-pointer inline-block font-semibold text-white duration-200 rounded-md mt-4 p-3 hover:shadow-xl bg-red-600 overflow-hidden">View All</a>
+        </div>
       </div>
     </div>
   </div>
@@ -151,6 +159,10 @@
             </div>
           </div>
           <% } %>
+        </div>
+        <!-- button here -->
+        <div class="flex justify-center items-center">
+          <a class="cursor-pointer inline-block font-semibold text-white duration-200 rounded-md mt-4 p-3 hover:shadow-xl bg-red-600 overflow-hidden">View All</a>
         </div>
       </div>
     </div>
@@ -202,6 +214,10 @@
             </div>
           </div>
           <% } %> 
+        </div>
+        <!-- button here -->
+        <div class="flex justify-center items-center">
+          <a class="cursor-pointer inline-block font-semibold text-white duration-200 rounded-md mt-4 p-3 hover:shadow-xl bg-red-600 overflow-hidden">View All</a>
         </div>
       </div>
     </div>
