--- a/views/layouts/dashboard/sections/sidebar.ejs
+++ b/views/layouts/dashboard/sections/sidebar.ejs
@@ -70,13 +70,8 @@
             <li>
               <a href="/dashboard/events"
                 class="relative flex flex-row items-center h-11 focus:outline-none duration-200 hover:bg-blue-800 <%= title === "Dashboard | Events" || title.length > "Dashboard | Events".length && title.substring(0, "Dashboard | Events".length) === "Dashboard | Events" ? "bg-blue-700" : "" %> dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
-                <span class="inline-flex justify-center items-center ml-4">
-                  <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9">
-                    </path>
-                  </svg>
+                <span class="w-5 h-5 inline-flex justify-center items-center ml-4">
+                  <i class="fas fa-medal"></i>
                 </span>
                 <span class="ml-2 text-sm tracking-wide truncate">Events</span>
               </a>
@@ -84,28 +79,17 @@
             <li>
               <a href="/dashboard/internship-applications"
                 class="relative flex flex-row items-center h-11 focus:outline-none duration-200 <%= title.substring(0, "Dashboard | Internship Application".length) === "Dashboard | Internship Application" ? "bg-blue-700" : "" %> hover:bg-blue-800 dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
-                <span class="inline-flex justify-center items-center ml-4">
-                  <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9">
-                    </path>
-                  </svg>
-                </span>
+                  <span class="w-3 mr-1 h-4 inline-flex justify-center items-center ml-5">
+                    <i class="far fa-file"></i>
+                  </span>
                 <span class="ml-2 text-sm tracking-wide truncate">Internship Applications</span>
               </a>
             </li>
             <li>
-            <li>
               <a href="/dashboard/participants"
                 class="relative flex flex-row items-center h-11 focus:outline-none duration-200 <%= title === "Dashboard | Participants" || title.length > "Dashboard | Participants".length && title.substring(0, "Dashboard | Participants".length) === "Dashboard | Participants" ? "bg-blue-700" : "" %> hover:bg-blue-800 dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
-                <span class="inline-flex justify-center items-center ml-4">
-                  <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9">
-                    </path>
-                  </svg>
+                <span class="w-5 h-6 nline-flex justify-center items-center ml-4">
+                  <i class="fas fa-user-plus"></i>
                 </span>
                 <span class="ml-2 text-sm tracking-wide truncate">Participants</span>
               </a>
@@ -113,13 +97,8 @@
             <li>
               <a href="/dashboard/magazine-subscribers"
                 class="relative flex flex-row items-center h-11 focus:outline-none duration-200 hover:bg-blue-800 <%= title === "Dashboard | Magazine Subscribers" ? "bg-blue-700" : "" %> dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
-                <span class="inline-flex justify-center items-center ml-4">
-                  <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9">
-                    </path>
-                  </svg>
+                <span class="w-5 h-6 inline-flex justify-center items-center ml-4">
+                  <i class="fas fa-book-reader"></i>
                 </span>
                 <span class="ml-2 text-sm tracking-wide truncate">Subscribers</span>
               </a>
@@ -127,13 +106,8 @@
             <li>
               <a href="/dashboard/generate-key"
                 class="relative flex flex-row items-center h-11 focus:outline-none duration-200 hover:bg-blue-800 <%= title === "Dashboard | Key Generation" ? "bg-blue-700" : "" %> dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
-                <span class="inline-flex justify-center items-center ml-4">
-                  <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                      d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9">
-                    </path>
-                  </svg>
+                <span class="w-5 h-5 inline-flex justify-center items-center ml-4">
+                  <i class="fas fa-key"></i>
                 </span>
                 <span class="ml-2 text-sm tracking-wide truncate">Generate Key</span>
               </a>
@@ -144,8 +118,8 @@
               </div>
             </li>
             <li>
-              <a href="#"
-                class="relative flex flex-row items-center h-11 focus:outline-none duration-200 hover:bg-blue-800 dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
+              <a href="/dashboard/profile"
+                class="relative flex flex-row items-center h-11 focus:outline-none duration-200 <%= title === "Dashboard | Profile" ? "bg-blue-700" : "" %>  hover:bg-blue-800 dark:hover:bg-gray-600 text-white-600 hover:text-white-800 border-l-4 border-transparent hover:border-blue-500 dark:hover:border-gray-800 pr-6">
                 <span class="inline-flex justify-center items-center ml-4">
                   <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
