Event creation form added and Contact form added

--- a/views/layouts/dashboard/sections/scripts.ejs
+++ b/views/layouts/dashboard/sections/scripts.ejs
@@ -1,4 +1,5 @@
 <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.0/dist/alpine.min.js" defer></script>
+<script src="/js/tingle.js"></script>
   <script>
     const setup = () => {
       const getTheme = () => {
