--- a/views/layouts/dashboard/sections/head.ejs
+++ b/views/layouts/dashboard/sections/head.ejs
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <link href="/css/styles.css" rel="stylesheet">
+<link href="/css/tingle.css" rel="stylesheet">
 <link href="/dashboard-styles.css" rel="stylesheet">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"
