1. Added four level auth middlewares 2. minor changes in contact-form.ejs

--- a/views/layouts/home/home-new.ejs
+++ b/views/layouts/home/home-new.ejs
@@ -79,7 +79,7 @@
             ev.preventDefault();
             let myForm = ev.target;
             // after banckend chnage update this
-            fetch("/monthly-magazine", {
+            fetch("/", {
                 body: JSON.stringify(convertFD2JSON(new FormData(myForm))),
                 method: "POST",
                 headers: {
