--- a/views/layouts/home/sections/contact-form.ejs
+++ b/views/layouts/home/sections/contact-form.ejs
@@ -17,9 +17,9 @@
                         id="name" placeholder="Your Name">
                     <input type="email" name="email" placeholder="Enter email"
                         class="w-full relative py-4 pl-6 pr-40 duration-300 border-2 rounded focus:border-red-400 focus:outline-none">
-                    <textarea name="description"
+                    <textarea name="message"
                         class="w-full h-44 resize-none relative py-4 px-6 duration-300 border-2 rounded focus:border-red-400 focus:outline-none"
-                        id="description" maxlength="200" placeholder="Why you want to join E-cell?"></textarea>
+                        id="description" maxlength="200" placeholder="Tell us your thoughts ..."></textarea>
                     <button type="submit"
                         class="m-auto w-full h-10 text-lg relative right-0 px-5 font-semibold text-white duration-200 rounded-md hover:shadow-xl bg-gradient-to-br from-pink-500 via-red-500 to-yellow-500 overflow-hidden">Submit</button>
                 </form>
